--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,12 @@
   font-size: large;
 }
 
+.box{
+  width: 100px;
+  height: 100px;
+  background: yellow;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
